--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -20,9 +20,9 @@
 
 // Gutter colors
 @syntax-gutter-text-color: @very-light-gray;
-@syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @dark-gray;
-@syntax-gutter-background-color-selected: @gray;
+@syntax-gutter-text-color-selected: @honey;
+@syntax-gutter-background-color: @very-dark-gray;
+@syntax-gutter-background-color-selected: @dark-gray;
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @blue;
